Add patreon link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ pageheader: 1
 <hr>
 
 <div class="container section">
+	<h1>Sponsors</h1>
+	<p>Want your company logo be featured here?<br><a href="https://patreon.com/eliangcs">Sponsor this project on Patreon</a>.</p>
+</div>
+
+<hr>
+
+<div class="container section">
 	<h1>Testimonials</h1>
 
 	<div class="row">
