--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ pageheader: 1
 
 <div class="container section">
 	<h1>Sponsors</h1>
-	<p>Want your company logo be featured here?<br><a href="https://patreon.com/eliangcs">Sponsor this project on Patreon</a>.</p>
+	<p>Want your company logo to be featured here?<br><a href="https://patreon.com/eliangcs">Sponsor this project on Patreon</a>.</p>
 </div>
 
 <hr>
