--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ pageheader: 1
 			<p>You'll never have to memorize the whole commands and HTTP headers thanks to autocomplete with fuzzy matching.</p>
 		</div>
 		<div class="col-sm-6">
-			<h2>Syntax Highlighting</h2>
+      <h2>Syntax Highlighting</h2>
 			<p>Improve readability by rendering JSON, HTML and commands with <a href="/themes">27 builtin color themes</a>, borrowed from <a href="http://pygments.org/">Pygments</a>.</p>
 		</div>
 	</div>
@@ -32,10 +32,12 @@ pageheader: 1
 			<p>With <a href="http://docs.http-prompt.com/en/latest/user-guide.html#pipeline">pipelines</a> and <a href="http://docs.http-prompt.com/en/latest/user-guide.html#output-redirection">output redirection</a>, HTTP Prompt works seamlessly with your existing command line tools such as <a href="https://stedolan.github.io/jq/">jq</a>.</p>
 		</div>
 		<div class="col-sm-6">
-			<h2>Shareable Sessions</h2>
-			<p>Share your sessions with your team members by <a href="http://docs.http-prompt.com/en/latest/user-guide.html#saving-and-loading-sessions">saving them to files</a>.</p>
+      <h2>OpenAPI/Swagger Integration<span style="color:#f55;">*</span></h2>
+      <p>Specify an OpenAPI/Swagger specification then you'll be able to explore API endpoints with <code>ls</code> like a filesystem.</p>
 		</div>
 	</div>
+
+  <p><span style="color:#f55;">*</span> Currently only available in <a href="/early-access">Early Access</a> subscription</p>
 </div>
 
 <hr>
@@ -44,13 +46,7 @@ pageheader: 1
 	<h1>Installation</h1>
 	<pre id="pip-install" onclick="selectText(this); gaEvent('other', 'pip-install');">pip install http-prompt</pre>
 	<p id="install-hint">See more installation options in the <a href="http://docs.http-prompt.com/en/latest/user-guide.html#installation">docs</a>.</p>
-</div>
-
-<hr>
-
-<div class="container section">
-	<h1>Sponsors</h1>
-	<p>Want your company logo to be featured here?<br><a href="https://patreon.com/eliangcs">Sponsor this project on Patreon</a>.</p>
+  <p>Or subscribe to our <a href="/early-access">Early Access</a> plan to install the latest version!</p>
 </div>
 
 <hr>
