--- a/early-access.html
+++ b/early-access.html
@@ -31,7 +31,7 @@ title: HTTP Prompt - Early Access
     <tr>
       <td>License</td>
       <td><a href="{{ site.license_url }}" target="_blank">AGPL</a></td>
-      <td><a href="{{ site.comm_license_url }}" target="_blank">Commericial</a></td>
+      <td><a href="{{ site.comm_license_url }}" target="_blank">Commercial</a></td>
     </tr>
     <tr>
       <td>Upgrade</td>
