Wording and grammar

--- a/early-access.html
+++ b/early-access.html
@@ -98,7 +98,7 @@ title: HTTP Prompt - Early Access
 <div class="container article">
   <h1>So what's new in v0.10.x?</h1>
   <p>HTTP Prompt v0.10.x is probably the most exciting release since we released Unix-like pipelines feature! In this version, we introduce <a href="https://openapis.org" target="_blank">OpenAPI specification</a> (fka Swagger) support. You'll be able to specify an OpenAPI specification with <code style="white-space:nowrap;">--spec</code> command line option then use <code>ls</code> and <code>cd</code> commands to navigate between API endpoints with autocomplete like a charm.</p>
-  <p>The following demonstrates how you can specify an OpenAPI specification to explore GitHub API and get a repo's releases without having to checking out the API documentation:</p>
+  <p>The following demo shows how easily you can explore GitHub API with a OpenAPI specification and get a repo's release history without having to read GitHub's API documentation:</p>
   <p>
 		<asciinema-player src="/assets/cast/v0.10.0.json" rows="27" cols="98" preload="1" loop="1" speed="1.2" poster="npt:20" font-size="small" theme="monokai"></asciinema-player>
   </p>
