--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@ pageheader: 1
 			<p>With <a href="http://docs.http-prompt.com/en/latest/user-guide.html#pipeline">pipelines</a> and <a href="http://docs.http-prompt.com/en/latest/user-guide.html#output-redirection">output redirection</a>, HTTP Prompt works seamlessly with your existing command line tools such as <a href="https://stedolan.github.io/jq/">jq</a>.</p>
 		</div>
 		<div class="col-sm-6">
-      <h2>OpenAPI/Swagger Integration<span style="color:#f55;">*</span></h2>
-      <p>Specify an OpenAPI/Swagger specification then you'll be able to explore API endpoints with <code>ls</code> like a filesystem.</p>
+      <h2>OpenAPI/Swagger Integration</h2>
+      <p><a href="http://docs.http-prompt.com/en/latest/user-guide.html#ls-cd-and-openapi-swagger-specification">Specify an OpenAPI/Swagger specification</a> then you'll be able to explore API endpoints with <code>ls</code> like a filesystem.</p>
 		</div>
 	</div>
-
-  <p><span style="color:#f55;">*</span> Currently only available in <a href="/early-access">Early Access</a> subscription</p>
 </div>
 
 <hr>
@@ -46,7 +44,6 @@ pageheader: 1
 	<h1>Installation</h1>
 	<pre id="pip-install" onclick="selectText(this); gaEvent('other', 'pip-install');">pip install http-prompt</pre>
 	<p id="install-hint">See more installation options in the <a href="http://docs.http-prompt.com/en/latest/user-guide.html#installation">docs</a>.</p>
-  <p>Or subscribe to our <a href="/early-access">Early Access</a> plan to install the latest version!</p>
 </div>
 
 <hr>
@@ -67,6 +64,18 @@ pageheader: 1
 		</div>
 	</div>
 
+</div>
+
+<hr>
+
+<div class="container section">
+  <h1>Newsletter</h1>
+  <p>Stay up to date with HTTP Prompt's new features and changes.</p>
+  <form class="form-inline" action="https://tinyletter.com/http-prompt" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/http-prompt', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+    <input type="text" class="form-control" name="email" id="tlemail" placeholder="Your email address">
+    <input type="hidden" value="1" name="embed">
+    <button type="submit" class="btn btn-success">Subscribe</button>
+  </form>
 </div>
 
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
